# ecgClassification

./: config.py  data.py  ecg_model_logs_ini.json  model_heads4_layers2_hidden128_logs.json  model_heads4_layers4_hidden128_logs.json  model_heads8_layers4_hidden256_logs.json  optuna_results.csv  pyproject.toml  requirements.txt  test.py  vis.py
